meu primeiro projeto commit

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <main>
 
-    <img src="./(Positive) Congratulation You get 40 point for your ride.png">
+    <img src="./img/(Positive) Congratulation You get 40 point for your ride.png">
 
   <div>
 
